[package]
name = "unionize-testbench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run-experiments"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = "1.0.170"
unionize = "0.3"
